--- a/src/Microsoft.Build.Tasks.Git.Operations/Microsoft.Build.Tasks.Git.nuspec
+++ b/src/Microsoft.Build.Tasks.Git.Operations/Microsoft.Build.Tasks.Git.nuspec
@@ -18,14 +18,14 @@
     <!-- 
       List platforms explicitly. If a new platform is supported by libgit2 update RuntimeIdMap method to handle it.
     -->
-    <file src="netcoreapp2.0\publish\runtimes\**\*.so" target="tools\netcoreapp2.0\runtimes" />
-    <file src="netcoreapp2.0\publish\runtimes\**\*.dylib" target="tools\netcoreapp2.0\runtimes" />
-    <file src="netcoreapp2.0\publish\runtimes\win-x86\native\*.dll" target="tools\netcoreapp2.0\runtimes\win-x86\native" />
-    <file src="netcoreapp2.0\publish\runtimes\win-x64\native\*.dll" target="tools\netcoreapp2.0\runtimes\win-x64\native" />
+    <file src="netstandard2.0\publish\runtimes\**\*.so" target="tools\netstandard2.0\runtimes" />
+    <file src="netstandard2.0\publish\runtimes\**\*.dylib" target="tools\netstandard2.0\runtimes" />
+    <file src="netstandard2.0\publish\runtimes\win-x86\native\*.dll" target="tools\netstandard2.0\runtimes\win-x86\native" />
+    <file src="netstandard2.0\publish\runtimes\win-x64\native\*.dll" target="tools\netstandard2.0\runtimes\win-x64\native" />
 
-    <file src="netcoreapp2.0\publish\LibGit2Sharp.dll" target="tools\netcoreapp2.0" />    
-    <file src="netcoreapp2.0\publish\Microsoft.Build.Tasks.Git.*" target="tools\netcoreapp2.0" />
-    <file src="netcoreapp2.0\publish\**\Microsoft.Build.Tasks.Git.resources.dll" target="tools\netcoreapp2.0" />
+    <file src="netstandard2.0\publish\LibGit2Sharp.dll" target="tools\netstandard2.0" />    
+    <file src="netstandard2.0\publish\Microsoft.Build.Tasks.Git.*" target="tools\netstandard2.0" />
+    <file src="netstandard2.0\publish\**\Microsoft.Build.Tasks.Git.resources.dll" target="tools\netstandard2.0" />
 
     <file src="net461\Microsoft.Build.Tasks.Git.*" target="tools\net461" />
     <file src="net461\**\Microsoft.Build.Tasks.Git.resources.dll" target="tools\net461" />
