--- a/src/SourceLink.Common/Microsoft.SourceLink.Common.nuspec
+++ b/src/SourceLink.Common/Microsoft.SourceLink.Common.nuspec
@@ -15,7 +15,7 @@
     <repository type="$RepositoryType$" url="$RepositoryUrl$" commit="$RepositoryCommit$" />
   </metadata>
   <files>
-    <file src="netcoreapp2.0\publish\**\Microsoft.SourceLink.Common.*" target="tools\netcoreapp2.0" />
+    <file src="netstandard2.0\publish\**\Microsoft.SourceLink.Common.*" target="tools\netstandard2.0" />
 
     <file src="net461\Microsoft.SourceLink.Common.*" target="tools\net461" />
 
