--- a/src/SourceLink.Vsts.Tfvc/Microsoft.SourceLink.Vsts.Tfvc.nuspec
+++ b/src/SourceLink.Vsts.Tfvc/Microsoft.SourceLink.Vsts.Tfvc.nuspec
@@ -19,7 +19,7 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="netcoreapp2.0\publish\**\Microsoft.SourceLink.*" target="tools\netcoreapp2.0" />
+    <file src="netstandard2.0\publish\**\Microsoft.SourceLink.*" target="tools\netstandard2.0" />
     <file src="net461\**\Microsoft.SourceLink.*" target="tools\net461" />
 
     <file src="$ProjectDirectory$\build\*.*" target="build" />
